# ezyquant

./: .gitignore  LICENSE.txt  Makefile  README.md  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: doc.yml  pypi.yml
docs/: Test.md  Test_Getting Started.md  Test_Live Trading.md  Test_Placing Order.md  Test_Strategy Building.md  Test_Visual Programming.md  datasets.md  index.md  intro.md  market_data.md  util_function.md
docs/source/: conf.py  ezyquant.rst  get_started.rst  index.rst  reference.rst  user_guide.rst
docs/source/_static/: backtest_context_attribute.csv  backtest_context_method.csv  daily_field.csv  financial_field.csv  financial_income_cashflow_field.csv  fy_qy_field.csv  index.csv  is_universe.csv  method.csv  non_daily_field.csv  price_match_mode.csv  sector_industry_field.csv  timeframe.csv  ttm_ytd_field.csv
docs/source/_static/css/: custom.css
docs/source/_templates/autosummary/: class.rst  module.rst
docs/source/api_reference/: ezyquant.rst  ezyquant_execution.rst
docs/source/get_started/: download_database.rst  install_data.rst  installation.rst
docs/source/guide/: backtest.rst  reader.rst
docs/source/reference/: ezyquant.backtest.account.rst  ezyquant.backtest.backtest.rst  ezyquant.backtest.context.rst  ezyquant.backtest.position.rst  ezyquant.backtest.rst  ezyquant.backtest.trade.rst  ezyquant.backtesting.account.rst  ezyquant.backtesting.backtesting.rst  ezyquant.backtesting.context.rst  ezyquant.backtesting.position.rst  ezyquant.backtesting.rst  ezyquant.backtesting.trade.rst  ezyquant.connect.rst  ezyquant.creator.rst  ezyquant.errors.rst  ezyquant.fields.rst  ezyquant.indicators.rst  ezyquant.reader.rst  ezyquant.report.rst  ezyquant.rst  ezyquant.utils.rst  ezyquant.validators.rst  index.rst  modules.rst
docs/source/user_guide/: backtest.rst  colab_example.rst  example.rst  execution.rst  get_started.rst  index.rst  parameter_property.rst  reader.rst  setup.rst  technical_indicator.rst
examples/: Change Trend.ipynb  model_ema.py  model_ema_report.xlsx  model_low_pe.py  model_rsi_divergence.py  model_thai_comment.py
examples/colabs/: Change Trend.ipynb  High Earnings and Dividends.ipynb  Laggard.ipynb  MACD.ipynb  Momentum.ipynb  Nearing End of Downtrend.ipynb  Resilient Stocks During SET Volatility.ipynb  Steady Downward Price Trend.ipynb  Steady Upward Price Trend.ipynb
ezyquant/: __init__.py  condition.py  connect.py  creator.py  errors.py  factor_manger.py  field.py  fields.py  indicators.py  reader.py  report.py  result.py  strategy.py  test__.py  test_reader.py  utils.py  validators.py
ezyquant/_indicator/: rsi_divergence.py  zigzag.py
ezyquant/backtest/: __init__.py  _backtest.py  account.py  backtest.py  backtest_logic.py  context.py  portfolio.py  position.py  result.py  trade.py  utils.py  validators.py
ezyquant/backtesting/: __init__.py  _backtesting.py  account.py  backtesting.py  context.py  position.py  trade.py
ezyquant/indicators/: __init__.py  pivot_point.py  rsi_divergence.py  ta.py  zigzag.py
tests/: conftest.py  constant.py  test_creator.py  test_indicators.py  test_reader.py  test_report.py  test_result.py  test_test_utils.py  test_utils.py  utils.py
tests/test_backtest/: conftest.py  test_account.py  test_backtest.py  test_backtest_logic.py  test_portfolio.py  test_position.py  test_protected_backtest.py  test_result.py  test_trade.py
tests/test_indicators/: test_pivot_point.py  test_rsi_divergence.py  test_ta.py
tests/test_report/: conftest.py  test_dividend_df.py  test_monthly_return_df.py  test_position_df.py  test_price_distribution_df.py  test_quantstats.py  test_stat_df.py  test_summary_df.py  test_summary_trade.py  test_summary_trade_df.py  test_to_basic.py  test_to_full.py  test_to_html.py  test_to_snapshot.py  test_trade_df.py  utils.py
